# pyo3-pydantic

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/simple-example/: Cargo.toml  README.md  main.py  pyproject.toml
examples/simple-example/simple_example_py/: __init__.py
examples/simple-example/src/: lib.rs
src/: lib.rs
test_assets/python/pyo3_pydantic/: model.py
