[package]
name = "pyo3-pydantic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config = "0.21.2"