[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simple_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
pyo3-pydantic = { path = "../../" }
serde = { version = "1.0.203", features = ["derive"] }
